<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.8"
            android:gravity="start"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"/>

        <Button
            android:id="@+id/itemIngButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:text="@string/just_Ing"
            android:textSize="@dimen/general_padding"/>


        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"/>

        <Button
            android:id="@+id/itemEditButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:text="@string/edit"
            android:textSize="@dimen/general_padding"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>