<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--   show lay     -->
        <LinearLayout
            android:id="@+id/show_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/showSpinner"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/months"/>

            <EditText
                android:id="@+id/yearText"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_yr"
                android:inputType="number"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/showButton"
                android:layout_weight="1.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/show" />
        </LinearLayout>



        <!--  List  -->
        <ListView
            android:id="@+id/listViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>



        <!--    Bottom Buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/menuButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:layout_weight="3"/>


            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/black"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/plus_button"
                android:layout_marginRight="@dimen/plus_button"
                />


            <Button
                android:id="@+id/inventoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textColor="@color/black"
                android:layout_weight="3"
                />
        </LinearLayout>










    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>