<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/general_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--    Menu Item NAME-->
        <LinearLayout
            android:id="@+id/item_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/reg_text"/>

            <EditText
                android:id="@+id/itemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" "
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>

        <!--    ITEM PRICE-->
        <LinearLayout
            android:id="@+id/price_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.4"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/reg_text"
                android:hint="Enter Double Value"/>

            <EditText
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>

        <!--     Divider-->
        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <!--    Add ING lay-->
        <LinearLayout
            android:id="@+id/ings_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerIng"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@string/add"/>

            <EditText
                android:id="@+id/qtyText"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_qty"
                android:inputType="numberDecimal"
                android:text="0"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/addButton"
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/add"
                app:layout_constraintTop_toBottomOf="@id/ingHeader"/>
        </LinearLayout>


        <!--    Ingredients:-->
        <TextView
            android:id="@+id/ingHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ing"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"
            android:gravity="start"/>

        <!--     ListView-->
        <ListView
            android:id="@+id/ingListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!--    Buttons-->
        <LinearLayout
            android:id="@+id/button_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Save Button-->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />


            <!--Delete Button-->
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"/>

        </LinearLayout>

















    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>