<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/general_padding"
    tools:context=".CreateIngredientActivity">




    <!--    ING NAME-->
    <LinearLayout
        android:id="@+id/name_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="@dimen/leftCol"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>


    <!--    ING QTY-->
    <LinearLayout
        android:id="@+id/qty_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/name_lay">
        <TextView
            android:layout_width="@dimen/leftCol"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"
            android:hint="Enter Double Value"/>

        <EditText
            android:id="@+id/qtyText"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>


    <!--    ING Unit-->
    <LinearLayout
        android:id="@+id/unit_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/qty_lay">
        <TextView
            android:layout_width="@dimen/leftCol"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="@color/black"
            android:textSize="@dimen/reg_text"/>

        <EditText
            android:id="@+id/unitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="lbs."
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/unit_lay">

        <!--Save Button-->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />


        <!--Delete Button-->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
